tests/netgen/errors/multiple_types/grid_and_random/options.netgen
--grid --rand --grid.number=10 --grid.length=400 --output=net.net.xml
